terraform/modules/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 80
    targetPort: 5001
  selector:
    app: backend
