terraform/modules/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: mern-app
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
    alb.ingress.kubernetes.io/success-codes: 200-399
spec:
  rules:
  - http:
      paths:
      - path: /_next/static
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /_next/data
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /_next/image
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
